finalise initial commit

--- a/Batch Barcode Scanner/Batch Barcode Scanner.csproj
+++ b/Batch Barcode Scanner/Batch Barcode Scanner.csproj
@@ -59,6 +59,7 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutActivity.cs" />
     <Compile Include="BarcodeScan.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="Configuration.cs" />
@@ -385,6 +386,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\menu\menu_sql.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\activity_about.axml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
